--- a/styles.css
+++ b/styles.css
@@ -74,6 +74,7 @@ body {
 
 .activity-description {
     color: #404E7C;
+    width: 200px;
 }
 
 
@@ -84,7 +85,7 @@ body {
 }
 
 .card{
-    border: 1px dotted blue;
+    border: 10px blue;
     padding: 20px;
     background: #A8DADC;
     box-shadow: 0px 6px 0px #1D3557;
@@ -92,7 +93,7 @@ body {
     display: flex;
     justify-content: space-around;
     width: 400px;
-    height: 300px;
+    height: 200px;
     margin-top: 50px;
     margin-bottom: 50px;
     margin-left: auto;
@@ -101,6 +102,14 @@ body {
 }
 .italic{
     font-style: italic;
+}
+
+.avatar{
+    
+width: 180px;
+height: 200px;
+border-radius: 10px;
+
 }
 
 img {
